--- a/css/style.css
+++ b/css/style.css
@@ -254,7 +254,8 @@ nav .login-btn a:hover {
 .filter-container {
     display: flex;
     flex-wrap: wrap;
-    gap: 24px;
+    column-gap: 24px;
+    row-gap: 12px;
     justify-content: space-between;
     align-items: flex-start;
 }
